--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     scroll-behavior: smooth;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 html,body{
     height: 100%;
     width: 100%;
+}
+.section1{
+    margin-bottom: 100px;
 }
 section{
     height: 100%;
@@ -24,5 +27,177 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 50px;
+}
+nav h1{
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+nav h4{
+    font-size: large;
+    font-weight: 400
+}
+
+nav button{
+    padding: 10px 20px;
+    font-size: large;
+    border-radius: 8px;
+    border: 1px solid black;
+}
+
+nav h1 i{
+    font-size: 50px;
+    display: inline-block;
+    font-weight: 100;
+    rotate: 45deg;
+}
+
+.center{
+    padding: 60px 70px;
+    height: 60%;
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+
+.center-part1{
+    height: 80%;
+    width: 44%;
+}
+.center-part2{
+    height: 80%;
+    width: 56%;
+}
+.center-part2 img{
+    width: 400px;
+    position: absolute;
+    right: 30px;
+}
+.center-part1 h1{
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.center-part1 p{
+    font-size: 20px;
+    width: 95%;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+.center-part1 button{
+    background-color: black;
+    color: azure;
+    border-radius: 8px;
+    padding: 20px 35px;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+}
+
+.section-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 120px;
+
+}
+.section-bottom img{
+    width: 100px;
+    margin-bottom: 10px;
+}
+.section2 .services{
+    padding: 40px 120px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+}
+.services h3{
+    background-color: #C6FF83;
+    font-weight: 500;
+    font: bold;
+    padding: 8px 10px;
+    border-radius: 5px;
+    font-size: 30px;
+
+}
+.services p{
+    width: 40%;
+    font-size: 20px;
+    font-weight: 500;
+}
+.container{
+    height: 87%;
+    width: 100%;
+    padding: 40px 120px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.elem{
+    flex-shrink: 0;
+    height: 250px;
+    width: 47%;
+    font-size: 15px;
+    border: 2px solid black;
+    border-radius: 20px;
+    box-shadow: 0px 10px 0px black;
+    padding: 20px;
+    display: flex;
+}
+
+.elem-part1{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.elem-part2{
+    height: 100%;
+    width: 50%;
+}
+.elem-part2 img{
+    height: 100%;
+}
+.elem-part1 h2{
+    font-size: 25px;
+    font-weight: 500;
+    background-color: #C6FF83;
+    width: 60%;
+    padding: 3px 8px;
+    border-radius: 10px;
+}
+.elem-part2 h4{
+    display: flex;
+    align-items: center;
+    font-size: 50px;
+    font-weight: 500;
+}
+.elem-part1 h4{
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+.elem-part1 h4 i{
+    padding: 10px;
+    border-radius: 50%;
+    background-color: black;
+    color: #C6FF83;
+    font-size: 20px;
+}
+.black{
+    background-color: black;
+}
+.black span{
+    color: white;
+}
+.black h4 i{
+    padding: 10px;
+    border-radius: 50%;
+    background-color: white;
+    color: black;
+    font-size: 20px;
 }
